Criado as tipagens de categorias e metodos

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -60,7 +60,7 @@
             "error",
             { "devDependencies": ["**/*.spec.js"] }
         ],
-        "prettier/prettier": "error"
+        "prettier/prettier": ["error", {"endOfLine":"auto"}]
     },
     "settings": {
       "import/resolver": {
