--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,10 +1,30 @@
 version: "3.7"
 
 services:
-  app: 
+  database_ignite:
+    image: postgres
+    container_name: database_ignite
+    restart: always
+    ports: 
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=rentx
+    volumes:
+      - pgdata:/data/postgres
+  app:
     build: .
     container_name: rentx
     ports: 
       - 3333:3333
     volumes:
       - .:/usr/app
+    links:
+      - database_ignite
+    depends_on:
+      - database_ignite
+
+volumes:
+  pgdata:
+    driver: local
