--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -5,6 +5,7 @@
   "username": "postgres",
   "password": "postgres",
   "database": "rentx",
+  "entities": [ "./src/modules/**/entities/*.ts" ],
   "migrations": ["./src/database/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/database/migrations"
