Criando o provider do SESMail

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 FORGOT_MAIL_URL=
+APP_API_URL=
 
 ## AWS Credentials
 AWS_ACCESS_KEY_ID=
@@ -6,6 +7,8 @@ AWS_SECRET_ACCESS_KEY=
 AWS_BUCKET=
 AWS_BUCKET_REGION=
 AWS_BUCKET_URL=
-APP_API_URL=
+AWS_REGION=
+
+MAIL_PROVIDER=
 
 disk=
