--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,9 @@ jobs:
         run: yarn
         
       - name: Build
-        run: yarn build
+        run: | 
+         cd car_rent/backend
+         yarn build
         
       - uses: appleboy/scp-action@master
         with:
@@ -38,5 +40,5 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: "./backend, !node_modules"
+          source: "., !node_modules"
           target: "test"
