--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         
       - name: Build
         run: | 
-         cd car_rent/backend
+         cd backend
          yarn build
         
       - uses: appleboy/scp-action@master
