--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
           node-version: 14.x
           
       - name: Install Dependencies
-        run: yarn
+        run: | 
+         cd backend
+         yarn
         
       - name: Build
         run: | 
