--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,9 +38,10 @@ jobs:
         
       - uses: appleboy/scp-action@master
         with:
+          run: cd backend
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          source: "./backend/.*, !./backend/node_modules"
+          source: "., !node_modules"
           target: "test"
