--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,12 @@ jobs:
         run: | 
          cd backend
          yarn build
+         
+      - name: Cp files
+        run: cp backend/* ./
         
       - uses: appleboy/scp-action@master
         with:
-          run: cd backend
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
