--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,4 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
-          target: "test"
+          target: "~/app/car_rent/backend"
