--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -13,17 +13,23 @@ services:
       - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
-  app:
-    build: .
-    container_name: rentx
-    ports: 
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-    links:
-      - database_ignite
-    depends_on:
-      - database_ignite
+
+  redis: 
+    image: redis:alpine
+    ports:
+      - 6379:6379
+
+  # app:
+  #   build: .
+  #   container_name: rentx
+  #   ports: 
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+  #   links:
+  #     - database_ignite
+  #   depends_on:
+  #     - database_ignite
 
 volumes:
   pgdata:
