--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@sentry/node": "^6.15.0",
+    "@sentry/tracing": "^6.15.0",
     "aws-sdk": "^2.989.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
